--- a/Project.toml
+++ b/Project.toml
@@ -9,3 +9,4 @@ Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
